Apply suggestions from code review
Co-authored-by: abbycross <across@us.ibm.com>

--- a/docs/run/error-mitigation-explanation.ipynb
+++ b/docs/run/error-mitigation-explanation.ipynb
@@ -41,7 +41,7 @@
    "source": [
     "## Dynamical decoupling\n",
     "\n",
-    "Quantum circuits are executed on IBM hardware as sequences of microwave pulses that need to be scheduled and run at precise time intervals.\n",
+    "Quantum circuits are executed on IBM&reg; hardware as sequences of microwave pulses that need to be scheduled and run at precise time intervals.\n",
     "Unfortunately, unwanted interactions between qubits can lead to coherent errors on idling qubits. Dynamical decoupling works by inserting pulse sequences on idling qubits to approximately cancel out the effect of these errors. Each inserted pulse sequence amounts to an identity operation, but the physical presence of the pulses has the effect of suppressing errors.\n",
     "There are many possible choices of pulse sequences, and which sequence is better for each particular case remains an [active area of research](https://journals.aps.org/prapplied/abstract/10.1103/PhysRevApplied.20.064027).\n",
     "\n",
@@ -49,7 +49,7 @@
     "\n",
     "![Depiction of dynamical decoupling](/images/run/error-mitigation-explanation/dd.jpg)\n",
     "\n",
-    "Dynamical decoupling can be enabled by setting `enable` to `True` in the [dynamical decoupling options](https://docs.quantum.ibm.com/api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.DynamicalDecouplingOptions). The `sequence_type` option can be used to pick from several different pulse sequences. The default sequence type is `\"XX\"`.\n",
+    "Dynamical decoupling can be enabled by setting `enable` to `True` in the [dynamical decoupling options](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.DynamicalDecouplingOptions). The `sequence_type` option can be used to pick from several different pulse sequences. The default sequence type is `\"XX\"`.\n",
     "\n",
     "The following code cell shows how to enable dynamical decoupling for the estimator and choose a dynamical decoupling sequence."
    ]
@@ -97,7 +97,7 @@
     "\n",
     "![Depiction of gate twirls](/images/run/error-mitigation-explanation/gate_twirls.png)\n",
     "\n",
-    "Pauli twirling can be enabled by setting `enable_gates` to `True` in the [twirling options](https://docs.quantum.ibm.com/api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.TwirlingOptions). Other notable options include:\n",
+    "Pauli twirling can be enabled by setting `enable_gates` to `True` in the [twirling options](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.TwirlingOptions). Other notable options include:\n",
     "\n",
     "- `num_randomizations`: The number of circuit instances to draw from the ensemble of twirled circuits.\n",
     "- `shots_per_randomization`: The number of shots to sample from each circuit instance.\n",
