--- a/docs/run/error-mitigation-explanation.ipynb
+++ b/docs/run/error-mitigation-explanation.ipynb
@@ -183,13 +183,13 @@
     "\n",
     "![Depiction of ZNE](/images/run/error-mitigation-explanation/zne.png)\n",
     "\n",
-    "ZNE can be enabled by setting `zne_mitigation` to `True` in version 2 of the [Qiskit Runtime resilience options](https://docs.quantum.ibm.com/api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.ResilienceOptionsV2).\n",
-    "The Qiskit Runtime options for ZNE are described [here](https://docs.quantum.ibm.com/api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.ZneOptions). The following options are notable:\n",
+    "ZNE can be enabled by setting `zne_mitigation` to `True` in the [Qiskit Runtime resilience options](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.ResilienceOptionsV2) for V2 Estimator.\n",
+    "The Qiskit Runtime options for ZNE are described [here](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.ZneOptions). The following options are notable:\n",
     "\n",
     "- `noise_factors`: The noise factors to use for noise amplification.\n",
     "- `extrapolator`: The functional form to use for the extrapolation.\n",
     "\n",
-    "The following code cell shows how enable ZNE and set these options for the estimator. None of these options are required to be set explicitly."
+    "The following code cell shows how to enable ZNE and set these options for the estimator. None of these options are required to be set explicitly."
    ]
   },
   {
@@ -229,7 +229,7 @@
     "The sampling overhead is a multiplicative factor on the number of shots required to estimate an expectation value to a given precision, compared to the number of shots that would be needed from the ideal circuit. It scales quadratically with $\\gamma$, which in turn scales exponentially with the depth of the circuit.\n",
     "\n",
     "PEC can be enabled by setting `pec_mitigation` to `True` in the [Qiskit Runtime resilience options](https://docs.quantum.ibm.com/api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.ResilienceOptionsV2) for V2 Estimator.\n",
-    "The Qiskit Runtime options for PEC are described [here](https://docs.quantum.ibm.com/api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.PecOptions). A limit on the sampling overhead can be set using the `max_overhead` option. Note that limiting the sampling overhead can cause the precision of the result to exceed the requested precision. The default value of `max_overhead` is 100.\n",
+    "The Qiskit Runtime options for PEC are described [here](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.PecOptions). A limit on the sampling overhead can be set using the `max_overhead` option. Note that limiting the sampling overhead can cause the precision of the result to exceed the requested precision. The default value of `max_overhead` is 100.\n",
     "\n",
     "The following code cell shows how to enable PEC and set the `max_overhead` option for the estimator."
    ]
@@ -254,7 +254,7 @@
     "## Next steps\n",
     "\n",
     "- Check out the [tutorial](https://learning.quantum.ibm.com/tutorial/combine-error-mitigation-options-with-the-estimator-primitive) on combining error mitigation options with the Estimator primitive.\n",
-    "- Visit the [API reference](https://docs.quantum.ibm.com/api/qiskit-ibm-runtime/options) to see all the options for the Qiskit Runtime primitives."
+    "- Visit the [API reference](/api/qiskit-ibm-runtime/options) to see all the options for the Qiskit Runtime primitives."
    ]
   }
  ],
