--- a/docs/transpile/rest-api-transpilation.mdx
+++ b/docs/transpile/rest-api-transpilation.mdx
@@ -1,11 +1,11 @@
 ---
-title: Qiskit Transpiler Service using REST API
-description: How to run a quantum computing job in a Qiskit Runtime session.
+title: Transpilation using REST APIs
+description: How to transpile quantum circuits using REST APIs
 ---
 
-# Qiskit transpiler service using REST API
+# Transpilation using REST APIs
 
-The circuit provided will need to be mapped to instructions fitting to the hardware basis instructions of the QPU, which is a process known as Transpilation
+The circuit provided will need to be mapped to instructions fitting to the hardware basis instructions of the QPU, which is a process known as Transpilation.
 
 * You can either transpile [locally via Qiskit](https://docs.quantum.ibm.com/transpile/defaults-and-configuration-options) before generating the QASM string, or:
 
@@ -14,6 +14,7 @@ The circuit provided will need to be mapped to instructions fitting to the hardw
 <Admonition type="note">
     [Transpilation is necessary](https://docs.quantum.ibm.com/announcements/product-updates/2024-02-14-qiskit-runtime-primitives-update) prior to submitting a circuit to IBM Quantum backends. 
 </Admonition>
+
 
 ### Query the Cloud Transpilation service
 
@@ -108,7 +109,7 @@ OPENQASM 3.0; include "stdgates.inc"; gate rzx_140040114706704(_gate_p_0) _gate_
 ## Next steps
 
 <Admonition type="tip" title="Recommendations">
-    - Review detailed [Sampler](rest-api-sampler) and [Estimator](rest-api-estimator) primitives examples.
+    - Review detailed [Sampler and Estimator](rest-api-primitives) primitives examples using REST APIs.
     - Read [Migrate to V2 primitives](/api/migration-guides/v2-primitives).
     - Practice with primitives by working through the [Cost function lesson](https://learning.quantum.ibm.com/course/variational-algorithm-design/cost-functions#primitives) in IBM Quantum Learning.
     - Learn how to transpile locally in the [Transpile](../transpile/) section.
