Modified .mdx files' titles

--- a/docs/run/rest-api-execution-modes.mdx
+++ b/docs/run/rest-api-execution-modes.mdx
@@ -1,9 +1,9 @@
 ---
-title: Run jobs in a session with REST API
+title: Execution modes using REST APIs
 description: How to run a quantum computing job in a Qiskit Runtime session.
 ---
 
-# Qiskit Runtime execution modes using REST APIs
+# Execution modes using REST APIs
 
 There are several ways to run your Qiskit Primitive workloads using REST APIs, depending on your needs. The three modes: job, session and batch are explained below. 
 
