--- a/docs/transpile/rest-api-transpilation.mdx
+++ b/docs/transpile/rest-api-transpilation.mdx
@@ -1,6 +1,6 @@
 ---
 title: Transpilation using REST APIs
-description: How to transpile quantum circuits using REST APIs
+description: How to transpile quantum circuits using REST APIs.
 ---
 
 # Transpilation using REST APIs
