Fixed typo in setup-channel.mdx

--- a/docs/start/setup-channel.mdx
+++ b/docs/start/setup-channel.mdx
@@ -169,7 +169,7 @@ print(result)
 
 ## Set up account using REST APIs
 
-Alternatively, you can also access IBM Quantum Systems using REST APIs, enabling you to work with quantum systems from any languauge or framework. 
+Alternatively, you can also access IBM Quantum Systems using REST APIs, enabling you to work with quantum systems from any programming language or framework. 
 
 1. Retrieve your IBM Quantum token from the [IBM Quantum account page](https://quantum.ibm.com/account) and save it to a file named `token`.
 
