--- a/docs/transpile/index.mdx
+++ b/docs/transpile/index.mdx
@@ -9,7 +9,7 @@ description: Introduction to transpiling quantum circuits in the Qiskit SDK.
 
 Transpilation is the process of rewriting a given input circuit to match the topology of a specific quantum device, and optimize the circuit instructions for execution on noisy quantum systems.  This documentation covers the tooling and workflows for local transpilation available to all Qiskit users, as well as for the cloud-based [Qiskit transpiler service](qiskit-transpiler-service) available to Premium Plan users.  If you're using primitives and are only interested in the default transpilation options provided by the Qiskit Runtime service, read the [Configure runtime compilation for Qiskit Runtime](../run/configure-runtime-compilation) topic.
 
-The process of transpilation takes circuit that contains your instructions:
+The process of transpilation takes a circuit that contains your instructions:
 
 <img src="/images/transpile/pre-transpiled.png" alt="A two-qubit quantum circuit containing a Hadamard and two CNOT gates." />
 
