--- a/tutorials/chsh-inequality/chsh-inequality.ipynb
+++ b/tutorials/chsh-inequality/chsh-inequality.ipynb
@@ -10,6 +10,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6b41d6b3",
+   "metadata": {},
+   "source": [
+    "QPU time estimate: 4 minutes, 40 seconds  on ibm_kyiv. (NOTE: This is an estimate only. Your runtime may vary.)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "fb089249",
    "metadata": {},
    "source": [
