--- a/tutorials/build-repetition-codes/build-repetition-codes.ipynb
+++ b/tutorials/build-repetition-codes/build-repetition-codes.ipynb
@@ -12,7 +12,7 @@
    "source": [
     "# Build repetition codes\n",
     "\n",
-    "*Estimated QPU usage: 2 seconds (tested on IBM Algiers)*\n",
+    "*QPU time estimate: 2 seconds on ibm_algiers. (NOTE: This is an estimate only. Your runtime may vary.)*\n",
     "\n",
     "## Background\n",
     "\n",
