no periods in headers

--- a/tutorials/chsh-inequality/chsh-inequality.ipynb
+++ b/tutorials/chsh-inequality/chsh-inequality.ipynb
@@ -256,7 +256,7 @@
    "id": "efabedc4",
    "metadata": {},
    "source": [
-    "## Step 2: Optimize problem for quantum execution."
+    "## Step 2: Optimize problem for quantum execution"
    ]
   },
   {
@@ -335,7 +335,7 @@
    "id": "b7194399",
    "metadata": {},
    "source": [
-    "## Step 3: Execute using Qiskit Primitives.\n",
+    "## Step 3: Execute using Qiskit Primitives\n",
     "\n",
     "In order to execute the entire experiment in one call to the [`Estimator`](https://docs.quantum-computing.ibm.com/api/qiskit-ibm-runtime/qiskit_ibm_runtime.EstimatorV2)."
    ]
@@ -374,7 +374,7 @@
    "id": "ace7dc90",
    "metadata": {},
    "source": [
-    "## Step 4: Post-process, return result in classical format.\n",
+    "## Step 4: Post-process, return result in classical format\n",
     "\n",
     "The estimator returns expectation values for both of the observables, $\\langle ZZ \\rangle - \\langle ZX \\rangle + \\langle XZ \\rangle + \\langle XX \\rangle$ and $\\langle ZZ \\rangle + \\langle ZX \\rangle - \\langle XZ \\rangle + \\langle XX \\rangle$."
    ]
