--- a/tutorials/chsh-inequality/chsh-inequality.ipynb
+++ b/tutorials/chsh-inequality/chsh-inequality.ipynb
@@ -335,7 +335,7 @@
    "id": "b7194399",
    "metadata": {},
    "source": [
-    "## Step 3: Execute using Qiskit Primitives\n",
+    "## Step 3: Execute using Qiskit primitives\n",
     "\n",
     "In order to execute the entire experiment in one call to the [`Estimator`](https://docs.quantum-computing.ibm.com/api/qiskit-ibm-runtime/qiskit_ibm_runtime.EstimatorV2)."
    ]
