--- a/docs/run/quantum-serverless.mdx
+++ b/docs/run/quantum-serverless.mdx
@@ -85,12 +85,12 @@ save_result(result[0].data.evs)
 
 Please refer to our guides on how to configure your pattern to [accept input arguments](https://qiskit.github.io/qiskit-serverless/getting_started/basic/02_arguments_and_results.html) and [handle external python dependencies](https://qiskit.github.io/qiskit-serverless/getting_started/basic/03_dependencies.html).
 
-After creating a workflow, authenticate to the `IBMServerlessProvider` with your IBM Quantum token, which can be obtained from your [IBM Quantum account](https://quantum.ibm.com/account), and upload the script.
+After creating a workflow, authenticate to the `IBMServerlessClient` with your IBM Quantum token, which can be obtained from your [IBM Quantum account](https://quantum.ibm.com/account), and upload the script.
 
 ```python
-# Authenticate to the IBM serverless provider
-from qiskit_serverless import IBMServerlessProvider
-serverless = IBMServerlessProvider("YOUR_IBM_QUANTUM_TOKEN")
+# Authenticate to the IBM serverless Client
+from qiskit_serverless import IBMServerlessClient
+serverless = IBMServerlessClient("YOUR_IBM_QUANTUM_TOKEN")
 
 # Deploy the pattern
 from qiskit_serverless import QiskitPattern
