--- a/tutorials/grovers-algorithm/grovers.ipynb
+++ b/tutorials/grovers-algorithm/grovers.ipynb
@@ -274,7 +274,7 @@
    "id": "97eb3019",
    "metadata": {},
    "source": [
-    "## Step 2: Optimize problem for quantum execution."
+    "## Step 2: Optimize problem for quantum execution"
    ]
   },
   {
@@ -313,7 +313,7 @@
    "id": "c5edec73",
    "metadata": {},
    "source": [
-    "## Step 3: Execute using Qiskit Primitives.\n",
+    "## Step 3: Execute using Qiskit Primitives\n",
     "\n",
     "Amplitude amplification is a sampling problem that is suitable for execution with the [`Sampler`](https://docs.quantum-computing.ibm.com/api/qiskit-ibm-runtime/qiskit_ibm_runtime.SamplerV2) runtime primitive.\n",
     "\n",
@@ -340,7 +340,7 @@
    "id": "87484abf",
    "metadata": {},
    "source": [
-    "## Step 4: Post-process, return result in classical format."
+    "## Step 4: Post-process, return result in classical format"
    ]
   },
   {
