updates from jessie

--- a/docs/run/runtime-options-overview.mdx
+++ b/docs/run/runtime-options-overview.mdx
@@ -141,17 +141,14 @@ Scroll to see the full table.
 |                      | zne                      | noise_factors           |                                                                                           | `(1, 3, 5)`                 |
 |                      |                          | extrapolator            | `'exponential'`<br />`'linear'`<br />`'double_exponential'`<br />`'polynomial_degree_(1 <= k <= 7)'` | (`'exponential'`, `'linear'`) |
 | resilience_level     |                          |                         | `0`/`1`/`2`                                                                                     | `1`                         |
-| seed_estimator       |                          |                         |                                                                                           |     `Unset`               |
+| seed_estimator       |                          |                         |  integer                                                                                |     `None`               |
 | simulator            |                          |                         |                                                                                   |                     |
-|                      | noise_model              |                         |                                                                                           | `Unset`                      |
-|                      | seed_simulator           |                         |                                                                                           | `Unset`                    |
-|                      | coupling_map             |                         |  List where each entry specifies a directed two-qubit interaction, for example: [[0, 1], [0, 3], [1, 2], [1, 5], [2, 5], [4, 1], [5, 3]]     | `Unset`                    |
-|                      | basis_gates              |                         |  Set of single- and two-qubit gates that provide a universal gates set, meaning that any quantum operation can be decomposed into those gates. Example: `['ecr', 'x', 'sx', 'rz']` | Click the appropriate system on the [Systems page](https://quantum.ibm.com/services/resources) to open its details page. |
+|                      | noise_model              |                         |   [Qiskit Aer NoiseModel](../verify/building_noise_models), or its representation        | `None`                      |
+|                      | seed_simulator           |                         |   integer                                                                               | `None`                    |
+|                      | coupling_map             |                         |  List where each entry specifies a directed two-qubit interaction, for example: [[0, 1], [0, 3], [1, 2], [1, 5], [2, 5], [4, 1], [5, 3]]     | full connectivity                   |
+|                      | basis_gates              |                         |  Set of single- and two-qubit gates that provide a universal gates set, meaning that any quantum operation can be decomposed into those gates. Example: `['ecr', 'x', 'sx', 'rz']` | The set of all basis gates supported by [Qiskit Aer simulator](https://qiskit.github.io/qiskit-aer/stubs/qiskit_aer.AerSimulator.html) |
 | transpilation        | skip_transpilation       |                         | `True`/`False`                                                                                      | `False`                     |
 |                      | initial_layout           |                         |                                                                                         |                         |
-|                      | layout_method            |                         |  `trivial`/`dense`/`noise_adaptive`/`sabre`                                        | `Unset`                    |
-|                      | routing_method           |                         |   `basic`/`lookahead`/`stochastic`/`sabre`/`none`                                       | `Unset`                    |
-|                      | approximation_degree     |                         | float in the range [0, 1]                               | `Unset`            |
 | twirling             | enable_gates             |                         | `True`/`False`                                                                                      | `False`                     |
 |                      | enable_measure           |                         | `True`/`False`                                                                                      | `True`                      |
 |                      | num_randomizations       |                         |  `auto`/ integer                                                                             | `'auto'`                    |
