--- a/tutorials/variational-quantum-eigensolver/vqe.ipynb
+++ b/tutorials/variational-quantum-eigensolver/vqe.ipynb
@@ -6,7 +6,7 @@
    "id": "a6f69b77",
    "metadata": {},
    "source": [
-    "*Estimated QPU usage: 28 minutes (tested on IBM Manila)*\n",
+    "*Usage estimate: 73 minutes on ibm_kyiv or 28 minutes on ibm_manila. (NOTE: This is an estimate only. Your runtime may vary.)*\n",
     "\n",
     "## Background\n",
     "\n",
@@ -70,21 +70,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "bc380c46",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'ibm_algiers'"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# runtime imports\n",
     "from qiskit_ibm_runtime import QiskitRuntimeService, Session\n",
@@ -92,8 +81,7 @@
     "\n",
     "# To run on hardware, select the backend with the fewest number of jobs in the queue\n",
     "service = QiskitRuntimeService(channel=\"ibm_quantum\")\n",
-    "backend = service.least_busy(operational=True, simulator=False)\n",
-    "backend.name"
+    "backend = service.least_busy(operational=True, simulator=False)"
    ]
   },
   {
@@ -750,9 +738,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
-   "name": "python3"
+   "name": ".venv"
   },
   "language_info": {
    "codemirror_mode": {
@@ -764,7 +752,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3"
+   "version": "3.11.1"
   }
  },
  "nbformat": 4,
