--- a/docs/run/runtime-options-overview.mdx
+++ b/docs/run/runtime-options-overview.mdx
@@ -110,7 +110,7 @@ Scroll to see the full table.
   <TabItem value="EstimatorV2" label="Estimator V2">
 | Options              | Sub-options              | Sub-sub-options         | Choices                                                                                   | Default                   |
 |----------------------|--------------------------|-------------------------|-------------------------------------------------------------------------------------------|---------------------------|
-| default_shots        |                          |                         |                                                                                           | `4096`                      |
+| default_shots        |                          |                         |  integer in the range[0, `backend.max_shots`]                                             | `4096`                      |
 | default_precision    |                          |                         |                                                                                           | `0.015625 (1 / sqrt(4096))`     |
 | dynamical_decoupling |                          |                         |                                                                                           |   `FieldInfo(annotation=Union[DynamicalDecouplingOptions, Dict], required=False, default_factory=DynamicalDecouplingOptions)`                         |
 |                      | enable                   |                         | `True`/`False`                                                             |    `False`           |
